--- a/charts/thoras/templates/operator/system-config-map.yaml
+++ b/charts/thoras/templates/operator/system-config-map.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: thoras-operator-system-config
-  namespace: { { .Release.Namespace } }
-  labels: { { - include "thoras.labels" . | nindent 4 } }
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "thoras.labels" . | nindent 4 }}
 data:
   scaling-paused: "false"
