--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -159,7 +159,9 @@ spec:
                 name: thoras-timescale-password
                 key: password
           - name: SERVICE_CHART_VERSION
-            value: "{{ .Chart.Version }}"
+            value: {{ .Chart.Version | quote }}
+          - name: SERVICE_THORAS_VERSION
+            value: {{ .Values.thorasVersion | quote }}
           - name: SERVICE_PORT
             value: {{ .Values.metricsCollector.blobService.containerPort | quote }}
           - name: SERVICE_SLACK_WEBHOOK_URL
