--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -117,7 +117,7 @@ spec:
             value: {{ .Values.thorasWorker.queriesPerSecond | default .Values.queriesPerSecond | quote }}
           - name: SERVICE_CHART_VERSION
             value: {{ .Chart.Version | quote }}
-          - name: SERVICE_THORAS_VERSION
+          - name: SERVICE_PLATFORM_VERSION
             value: {{ .Values.thorasVersion | quote }}
           {{- with .Values.rbac.namespaces }}
           - name: SERVICE_WATCH_NAMESPACES
