PLATFORM-3414: all wait-for-api-service initContainers run as nobody

--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -55,6 +55,8 @@ spec:
       initContainers:
       - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.thorasOperator.imageTag }}
         name: wait-for-api-service
+        securityContext:
+          runAsUser: 65534 # user: nobody
         env:
           - name: API_HEALTH_URL
             value: "http://thoras-api-server-v2/health"
