--- a/charts/thoras/templates/monitor/deployment.yaml
+++ b/charts/thoras/templates/monitor/deployment.yaml
@@ -30,6 +30,8 @@ spec:
       {{- end }}
     spec:
       securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534 # user: nobody
         seccompProfile:
           type: RuntimeDefault
       serviceAccountName: {{ .Values.thorasMonitor.serviceAccount.name }}
@@ -44,8 +46,6 @@ spec:
       initContainers:
       - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.thorasMonitor.imageTag }}
         name: wait-for-api-service
-        securityContext:
-          runAsUser: 65534 # user: nobody
         env:
           - name: API_HEALTH_URL
             value: "http://thoras-api-server-v2/health"
