--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -648,8 +648,8 @@ spec:
                       the level of aggression in scaling.
                     enum:
                     - balanced
-                    - cost_savings
-                    - max_assurance
+                    - cost-optimized
+                    - undershoot
                     type: string
                 type: object
               scaleTargetRef:
