PLATFORM-3414: Add allowPrivilegeEscalation=false to all containers

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -53,6 +53,8 @@ spec:
       initContainers:
       - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.thorasApiServerV2.imageTag }}
         name: wait-for-postgres
+        securityContext:
+          allowPrivilegeEscalation: false
         env:
           - name: DATABASE_HOST
             valueFrom:
@@ -97,6 +99,8 @@ spec:
       - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.thorasApiServerV2.imageTag }}
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         name: thoras-api-server-v2
+        securityContext:
+          allowPrivilegeEscalation: false
         command: ["/app/api-server"]
         env:
           - name: DATABASE_HOST
