--- a/charts/thoras/templates/forecast-worker/deployment.yaml
+++ b/charts/thoras/templates/forecast-worker/deployment.yaml
@@ -45,6 +45,8 @@ spec:
         name: wait-for-api-service
         securityContext:
           allowPrivilegeEscalation: false
+          capabilities:
+            drop: [ALL]
         env:
           - name: API_HEALTH_URL
             value: "http://thoras-api-server-v2/health"
@@ -63,6 +65,8 @@ spec:
         name: thoras-forecast-worker
         securityContext:
           allowPrivilegeEscalation: false
+          capabilities:
+            drop: [ALL]
         command: [
           "worker",
           "--polling_interval",
