feat: update cost-optimized to cost_optimized

--- a/charts/thoras/templates/crd/clusteraiscaletemplate.yaml
+++ b/charts/thoras/templates/crd/clusteraiscaletemplate.yaml
@@ -717,7 +717,7 @@ spec:
                           the level of aggression in scaling.
                         enum:
                         - balanced
-                        - cost-optimized
+                        - cost_optimized
                         - undershoot
                         type: string
                     type: object
