refactor: add back in old model enums

--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -649,6 +649,8 @@ spec:
                     enum:
                     - balanced
                     - cost_optimized
+                    - cost_savings
+                    - max_assurance
                     - undershoot
                     type: string
                 type: object
