--- a/charts/thoras/templates/crd/clusteraiscaletemplate.yaml
+++ b/charts/thoras/templates/crd/clusteraiscaletemplate.yaml
@@ -718,6 +718,8 @@ spec:
                         enum:
                         - balanced
                         - cost_optimized
+                        - cost_savings
+                        - max_assurance
                         - undershoot
                         type: string
                     type: object
