--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -147,7 +147,7 @@ spec:
           - name: SERVICE_POSTGRESQL_DSN
             value: "$(DATABASE_HOST)/thoras"
           - name: SERVICE_ENABLE_CLOUD_SYNC
-          {{- if (and .Values.cloudSync.cloudSyncBaseUrl .Values.cloudSync.clusterKeyID)}}
+          {{- if (and .Values.cloudSync.baseUrl .Values.cloudSync.clusterKeyID)}}
             value: "true"
           {{- else }}
             value: "false"
@@ -155,7 +155,7 @@ spec:
           - name: SERVICE_CLOUD_SYNC_CLUSTER_KEY_ID
             value: {{ .Values.cloudSync.clusterKeyID | quote }}
           - name: SERVICE_CLOUD_SYNC_BASE_URL
-            value: {{ .Values.cloudSync.cloudSyncBaseUrl | quote }}
+            value: {{ .Values.cloudSync.baseUrl | quote }}
           - name: SERVICE_CLOUD_SYNC_CLUSTER_KEY
             valueFrom:
               secretKeyRef:
