Remove unnecessary ngxin api-proxy

--- a/charts/thoras/templates/dashboard/service.yaml
+++ b/charts/thoras/templates/dashboard/service.yaml
@@ -36,6 +36,6 @@ spec:
   - name: http
     port: {{ .Values.thorasDashboard.port }}
     protocol: TCP
-    targetPort: {{ .Values.thorasDashboard.nginxContainerPort }}
+    targetPort: {{ .Values.thorasDashboard.containerPort }}
   selector:
     app: thoras-dashboard
