--- a/charts/thoras/tests/dashboard_deployment_test.yaml
+++ b/charts/thoras/tests/dashboard_deployment_test.yaml
@@ -15,13 +15,10 @@ tests:
           path: metadata.name
           value: thoras-dashboard
       - equal:
-          path: spec.template.spec.containers[0].image
+          path: spec.template.spec.containers[?(@.name == 'thoras-dashboard')].image
           value: us-east4-docker.pkg.dev/thoras-registry/platform/thoras-dashboard-v2:TEST
       - equal:
-          path: spec.template.spec.containers[1].image
-          value: us-east4-docker.pkg.dev/thoras-registry/platform/nginx:1.29.5-alpine3.23-slim
-      - equal:
-          path: spec.template.spec.containers[1].volumeMounts[0]
+          path: spec.template.spec.containers[?(@.name == 'thoras-dashboard')].volumeMounts[0]
           value:
             name: nginx-config
             mountPath: /etc/nginx/nginx.conf
